--- a/2.Classification/1.Classification.ipynb
+++ b/2.Classification/1.Classification.ipynb
@@ -27,7 +27,7 @@
     "5. **Test modellen**\n",
     "6. **Forbedr modellen og gentag processen**\n",
     "\n",
-    "Derudover demonstrerer notebooken, hvordan man konverterer en [gemt model](../../../guide/saved_model.ipynb) til en [TensorFlow Lite](https://www.tensorflow.org/lite/) model til maskinlæring på mobile, integrerede og IoT-enheder.\n"
+    "Derudover demonstrerer notebooken, hvordan man konverterer en gemt model til en [TensorFlow Lite](https://www.tensorflow.org/lite/) model til maskinlæring på mobile, integrerede og IoT-enheder.\n"
    ]
   },
   {
@@ -304,9 +304,7 @@
     "Sørg for at bruge bufferlagring (buffered prefetching), så du kan hente data fra disken uden at I/O bliver blokerende. Her er to vigtige metoder, du bør bruge, når du indlæser data:\n",
     "\n",
     "- `Dataset.cache` gemmer billederne i hukommelsen efter de er blevet indlæst fra disken under den første epoke. Dette vil sikre, at datasættet ikke bliver en flaskehals under træningen af din model. Hvis dit datasæt er for stort til at passe i hukommelsen, kan du også bruge denne metode til at oprette en ydeevnedrevet cache på disken.\n",
-    "- `Dataset.prefetch` overlapper dataforarbejdning og modelkørsel under træning.\n",
-    "\n",
-    "Interesserede læsere kan lære mere om begge metoder, samt hvordan man gemmer data på disken, i afsnittet om *Bufferlagring (Prefetching)* i [Bedre ydeevne med tf.data API](../../guide/data_performance.ipynb) vejledningen.\n"
+    "- `Dataset.prefetch` overlapper dataforarbejdning og modelkørsel under træning.\n"
    ]
   },
   {
@@ -520,7 +518,7 @@
    "metadata": {},
    "source": [
     "## Dataaugmentering\n",
-    "Overfitting opstår normalt, når der er et lille antal træningseksempler. [Dataaugmentering](./data_augmentation.ipynb) anvender tilgangen med at generere yderligere træningsdata fra dine eksisterende eksempler ved at udvide dem med tilfældige transformationer, der producerer troværdigt udseende billeder. Dette hjælper med at udsætte modellen for flere aspekter af dataen og generalisere bedre.\n",
+    "Overfitting opstår normalt, når der er et lille antal træningseksempler. Dataaugmentering anvender tilgangen med at generere yderligere træningsdata fra dine eksisterende eksempler ved at udvide dem med tilfældige transformationer, der producerer troværdigt udseende billeder. Dette hjælper med at udsætte modellen for flere aspekter af dataen og generalisere bedre.\n",
     "\n",
     "Du vil implementere dataaugmentering ved hjælp af følgende Keras-forbehandlingslag: `tf.keras.layers.RandomFlip`, `tf.keras.layers.RandomRotation` og `tf.keras.layers.RandomZoom`. Disse kan inkluderes i din model som andre lag og køre på GPU'en.\n"
    ]
@@ -578,7 +576,7 @@
    "source": [
     "## Dropout\n",
     "\n",
-    "En anden teknik til at reducere overfitting er at introducere [dropout](https://developers.google.com/machine-learning/glossary#dropout_regularization){:.external}-regulering til netværket.\n",
+    "En anden teknik til at reducere overfitting er at introducere [dropout](https://developers.google.com/machine-learning/glossary#dropout_regularization)-regulering til netværket.\n",
     "\n",
     "Når du anvender dropout på et lag, udelukker det tilfældigt (ved at indstille aktiveringen til nul) et antal outputenheder fra laget under træningsprocessen. Dropout tager et brøkdeligt tal som inputværdi, i form som f.eks. 0,1, 0,2, 0,4, osv. Dette betyder, at 10%, 20% eller 40% af outputenhederne tilfældigt udelukkes fra det anvendte lag.\n",
     "\n",
